fix textarea overlap via padding style change

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ textarea{
   resize: none;
   color: #000000;
   border: 1px solid black;
-  padding: 30px;
+  padding: 10px;
 }
 
 .jumbotron {
